<resources>
    <string name="app_name" translatable="false">GymPlanner</string>
    <string name="plan">Planear</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Martes</string>
    <string name="wednesday">Miercoles</string>
    <string name="thursday">Jueves</string>
    <string name="friday">Viernes</string>
    <string name="saturday">Sabado</string>
    <string name="sunday">Domingo</string>
    <string name="add_exercise">Agregar ejercicio</string>
    <string name="delete_all_plans">Eliminar todo</string>
    <string name="hint_write_exercise">Escribe tu ejercicio</string>
    <string name="save">Guardar</string>
    <string name="start">Iniciar</string>
    <string name="pause">Pausar</string>
    <string name="reset">Reiniciar</string>
    <string name="minutes">Minutos</string>
    <string name="seconds">Segundos</string>
    <string name="day">Dia</string>
    <string name="duration">Duracion</string>
    <string name="sets">Series</string>
    <string name="reps">Repeticiones</string>
    <string name="rest">Descanso</string>
    <string name="weight">Peso</string>
    <string name="alert">Esta seguro de realizar esta acción?</string>
    <string name="confirmation">Confirmación</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="of">de</string>
    <string name="default_text">sample_text</string>
    <string name="notes">Notas</string>
    <string name="reset_exercises">Los ejercicios han sido reiniciados</string>
    <string name="exercises_already_reset">Los ejercicios ya estan reiniciados</string>
    <string name="empty_exercises">No hay ejercicios que reiniciar</string>
</resources>