<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvMessageConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/btnPositive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:text="@string/yes"
        app:layout_constraintTop_toBottomOf="@+id/tvMessageConfirmation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNegative"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btnNegative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:text="@string/no"
        app:layout_constraintTop_toBottomOf="@+id/tvMessageConfirmation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPositive"/>


</androidx.constraintlayout.widget.ConstraintLayout>