<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundPrimaryColor"
    tools:context=".ui.insertplan.InsertPlanActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:src="@drawable/kettlebell"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        app:tint="@color/black"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="?attr/backgroundPrimaryColor"
        app:cardCornerRadius="32dp"
        android:layout_marginTop="170dp"
        android:layout_marginBottom="-30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnAddExercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-6dp"
                android:layout_marginEnd="-6dp"
                app:srcCompat="@drawable/ic_plus"
                app:shapeAppearanceOverlay="@style/custom_corners_cut_fab_style"
                app:maxImageSize="48dp"
                app:fabCustomSize="70dp"
                app:tint="@color/black"
                android:backgroundTint="@color/accent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <EditText
                android:id="@+id/etExercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/hint_write_exercise"
                android:paddingHorizontal="72dp"
                android:textSize="24sp"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/divider"
                android:inputType="text"
                android:importantForAutofill="no"/>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                app:dividerColor="@color/black"

                app:layout_constraintTop_toBottomOf="@+id/btnAddExercise"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnAddExercise"/>

            <GridLayout
                android:id="@+id/glInsertInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="16dp"
                android:columnCount="2"
                android:rowCount="3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider">

                <com.adhrox.gymplanner.ui.insertplan.customviews.InfoInsertCustomView
                    android:id="@+id/iicvDay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:imageSrc="@drawable/ic_days"
                    app:customText="@string/day"
                    app:viewType="spinner"
                    />
                <com.adhrox.gymplanner.ui.insertplan.customviews.InfoInsertCustomView
                    android:id="@+id/iicvDuration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:imageSrc="@drawable/ic_clock"
                    app:customText="@string/duration"
                    app:viewType="editText"
                    />
                <com.adhrox.gymplanner.ui.insertplan.customviews.InfoInsertCustomView
                    android:id="@+id/iicvSets"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:imageSrc="@drawable/ic_sets"
                    app:customText="@string/sets"
                    app:viewType="editText"
                    />
                <com.adhrox.gymplanner.ui.insertplan.customviews.InfoInsertCustomView
                    android:id="@+id/iicvReps"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:imageSrc="@drawable/ic_reps"
                    app:customText="@string/reps"
                    app:viewType="editText"
                    />
                <com.adhrox.gymplanner.ui.insertplan.customviews.InfoInsertCustomView
                    android:id="@+id/iicvRest"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:imageSrc="@drawable/ic_rest"
                    app:customText="@string/rest"
                    app:viewType="editText"
                    />
                <com.adhrox.gymplanner.ui.insertplan.customviews.InfoInsertCustomView
                    android:id="@+id/iicvWeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:imageSrc="@drawable/ic_weight"
                    app:customText="@string/weight"
                    app:viewType="editText"
                    />

            </GridLayout>

            <TextView
                android:id="@+id/tvNotes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                style="@style/title"
                android:text="@string/notes"
                app:layout_constraintTop_toBottomOf="@id/glInsertInfo"
                app:layout_constraintStart_toStartOf="parent"
                />

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvNotes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <EditText
                    android:id="@+id/etNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/body"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:focusableInTouchMode="true"/>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>